encoding/jsonschema/testdata/txtar/boolschema_oldversion.txtar
-- schema.json --
{
	"$schema": "http://json-schema.org/draft-04/schema#",
	"anyOf": [true]
}

-- out/decode/extract --
ERROR:
boolean schemas not supported in http://json-schema.org/draft-04/schema#:
    schema.json:3:12
-- out/decode-v3/extract --
ERROR:
boolean schemas not supported in http://json-schema.org/draft-04/schema#:
    schema.json:3:12
